syntax = "proto3";

package member.user;

import "common/base.proto";
import "member/address/address_messages.proto";
import "google/protobuf/timestamp.proto";
import "google/type/date.proto";

option java_multiple_files = true;
option java_package = "com.gdn.project.waroenk.member";
option java_outer_classname = "UserMessagesProto";

message UserData {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string phone = 4;
    google.type.Date dob = 5;
    address.AddressData default_address = 6;
    string gender = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message CreateUserRequest {
    string full_name = 1;
    string email = 2;
    string phone = 3;
    optional google.type.Date dob = 4;
    string password = 5;
    optional string gender = 6;
}

message PhoneOrEmailRequest {
    string phone_or_email = 1;
}

message CreateUserResponse {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string phone = 4;
    google.type.Date dob = 5;
    string gender = 6;
    google.protobuf.Timestamp created_at = 7;
}

message MultipleUserResponse {
    repeated UserData data = 1;
    string next_token = 2;
    int32 total = 3;
}

message FilterUserRequest {
    string query = 1;
    int32 size = 2;
    optional string cursor = 3;
    optional common.SortBy sort_by = 4;
}

message AuthenticateRequest {
    string user = 1;
    string password = 2;
}

message UserTokenResponse {
    string access_token = 1;
    string token_type = 2;
    int64 expires_in = 3;
    string user_id = 4;
}

message UpdateUserRequest {
    string id = 1;
    string full_name = 2;
    optional string email = 3;
    optional string phone = 4;
    optional google.type.Date dob = 5;
    optional string gender = 6;
}

// =====================================================
// LOGOUT
// =====================================================
message LogoutRequest {
    string user_id = 1;
    optional string access_token = 2;
}

message LogoutResponse {
    bool success = 1;
    string message = 2;
}

// =====================================================
// FORGOT PASSWORD
// =====================================================
message ForgotPasswordRequest {
    string phone_or_email = 1;
}

message ForgotPasswordResponse {
    bool success = 1;
    string message = 2;
    string reset_token = 3;
    int64 expires_in_seconds = 4;
}

// =====================================================
// CHANGE PASSWORD (using reset token)
// =====================================================
message ChangePasswordRequest {
    string reset_token = 1;
    string new_password = 2;
    string confirm_password = 3;
}

message ChangePasswordResponse {
    bool success = 1;
    string message = 2;
}

// =====================================================
// REFRESH TOKEN
// =====================================================
message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    string token_type = 3;
    int64 expires_in = 4;
    string user_id = 5;
}